Pass the operator's JVM arguments through to the server process
Found while comparing memory handling against Arclight. Arclight boots the
loader inside the JVM it was started in, so whatever is on the command line is
simply what the game runs with, and there is nothing to forward. LunarArc's
launchers spawn the server as a child process and build that command line from
scratch, adding only the java executable, a couple of -D properties of their
own, the loader's args file and --nogui. Nothing the operator set was carried
across.

Heap is the visible casualty. A server started with -Xmx4G ran Minecraft on the
JVM default of a quarter of system RAM, and its crash reports read

  JVM Flags: 0 total;
  Memory: ... 1404 MiB up to 1404 MiB

while the operator was looking at the flags they had set. Minecraft's
SystemReport lists only arguments beginning with -X, which is why the count was
not merely wrong but zero. The same silence swallowed -XX GC tuning and every
-D property, including -Dlunararc.debug and -Dmax.bg.threads.

LauncherUtils.inheritedJvmArguments forwards -X, -XX and -D from this process,
and all four launchers now use it. Excluded on purpose: -javaagent/-agentpath/
-agentlib, since the launcher jar is itself the agent on the in-process path and
handing that to the child would start a second launcher inside the server; and
the module-system flags, since the loader's args file already states exactly
what the server needs. A -D whose key the launcher sets itself is skipped so an
explicit value is never shadowed by an inherited duplicate. A runtime with no
management bean forwards nothing rather than failing to launch.

Forge additionally had -Dfml.modsDir added after the args file, whose last token
is the main class - so it was passed as a game argument and never set as a
system property. It now precedes the args file, with the inherited arguments.

This does not make the child path equal to the in-process one. The parent has
already reserved its heap before